# blockchain-protocols-and-distributed-applications

./: .gitignore  .gitmodules  404.html  Dockerfile  Makefile  README.md  config.yaml  index.html  md_parser.py  mkdocs.yml  sitemap.xml  solana_grant_proposal.md
.github/: labeler.yml
Assignments/: index.html
Lecture/: index.html
Lectures/: index.html
Practical Sessions/: index.html
Quizzes/: index.html
Template Chapter/: index.html
assignments/: assignment1.md  blockchain_research_assignment.md  practical-exam-2024.md  project.md  scientific_research_assignment.md
assignments/tema-1/: .gitignore  Cargo.toml
assignments/tema-1/meta/: Cargo.toml
assignments/tema-1/meta/src/: main.rs
assignments/tema-1/scenarios/: tema_1.scen.json
assignments/tema-1/src/: card_properties.rs  tema_1.rs
assignments/tema-1/tests/: tema_1_scenario_go_test.rs  tema_1_scenario_rs_test.rs
assignments/tema-1/wasm/: Cargo.toml
assignments/tema-1/wasm/src/: lib.rs
chapters/: README.md  index.html
cover/: index.html
demos/: bitcoin-demo.html  bitcoin-longest-chain-demo.html  bitcoin-transaction-demo.html  blockchain-bridges-demo.html  byzantine-generals-demo.html  consensus-group-demo.html  mev-demo.html  proof-of-stake-demo.html
grading/: index.html
markdown-page/: index.html
preface/: index.html
resources/: index.html
search/: search_index.json
util/subscription-sc/interactor/: Cargo.toml  state.toml
util/subscription-sc/interactor/src/: config.rs  interact.rs  interactor_main.rs
util/subscription-sc/interactor/tests/: interact_tests.rs
(+2075 files in other folders)
