[package]
name = "tema-1"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/tema_1.rs"

[dependencies.multiversx-sc]
version = "0.53.2"

[dev-dependencies]
num-bigint = "0.4"

[dependencies.multiversx-sc-modules]
version = "0.53.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.53.2"

[workspace]
members = [
    ".",
    "meta",
]
