[package]
name = "rust-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[lib]
path = "src/interact.rs"

[dependencies.subscription]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.62.1"

[dependencies.multiversx-sc]
version = "0.62.1"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[features]
chain-simulator-tests = []

